Made app more responsive (fixed youtube video and article with image , on mobile)

--- a/src/app/feed/card/assetmanagementcards/news-card/news-card.component.scss
+++ b/src/app/feed/card/assetmanagementcards/news-card/news-card.component.scss
@@ -13,3 +13,13 @@
     max-height: 160px;
     max-width: 300px;
 }
+
+@media only screen and (max-width: 768px) {
+    .article__image-container {
+        display: none !important;
+    }
+
+    .article__container {
+        max-width: 100% !important;
+    }
+}
